[package]
name = "nft_playground"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_playground"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
metaplex-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
solana-program = "1.9.2"